# Humanitys-Last-Hope

./: README.md
backend/: crew.py  crewai_flow.html  flow.py  humanity_crew.py  humanity_flow.py  knowledge.py  main.py  pyproject.toml  store.py  vectordb.py
backend/config/: agents.yaml  tasks.yaml
backend/tools/: create_video.py  news.py  send_email.py
frontend/: package.json  pnpm-lock.yaml
frontend/public/: timeless.txt
frontend/src/api/: client.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/timeless/: page.tsx
frontend/src/app/vault/: page.tsx
